Overflow fixes

--- a/css/integrations.css
+++ b/css/integrations.css
@@ -1,3 +1,7 @@
+body {
+    overflow-x: hidden;
+}
+
 .integrations-container {
     width: 75vw;
     height: auto;
@@ -32,5 +36,6 @@
     bottom: 0;
     padding: 1vw;
     width: 100vw;
+    overflow: hidden;
     height: 20vh;
 }
